@@ -450,16 +450,6 @@ Scenes.Lizards.WinTailpeg = function(enc) {
 		Text.NL();
 		player.FuckVag(player.FirstVag(), null, 3);
 		Sex.Vaginal(enemy, player);
-		
-		// TODO
-		player.PregHandler().Impregnate({
-			slot   : PregnancyHandler.Slot.Vag,
-			mother : player,
-			father : enemy,
-			type   : PregType.Lizard,
-			num    : 1,
-			time   : 16
-		});
 	}
 	else {
 		Text.Add("your [anusDesc] slowly stretching around it. You lift one hand, licking the palm of it, then bring it back down to lubricate her tail slightly. As you rub your saliva along the length of her scaled tail, it starts to slide in much more easily.", parse);
